--- a/index.html
+++ b/index.html
@@ -930,7 +930,7 @@ var FLAGS = {
 }
 
 // TEMP: call this once to identify offenders
-import { get } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-database.js";
+//import { get } from "https://www.gstatic.com/firebasejs/10.12.0/firebase-database.js";
 
 async function debugScanRooms() {
   const snap = await get(ref(db, "rooms"));
